--- a/Taco Shop Website/indext.html
+++ b/Taco Shop Website/indext.html
@@ -3,6 +3,7 @@
 
 <head>
 
+    <title>Little Taco Shop</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="main.css" type="text/css">
     <link rel="icon" href="favicon.ico" type="ico/x-icon">
@@ -12,6 +13,7 @@
 <body>
 
     <header>
+
         <h1>Welcome to the Little Taco Shop</h1>
 
         <nav>
@@ -46,7 +48,7 @@
 
         <h2>About <abbr title="Little Taco Shop"></abbr>LTS</h2>
         <p>
-            <abbr title="Little Taco Shop">LTS</abbr> LTS was founded in 2022. Our shop was built from a <strong> love of tacos</strong> 🌮🌮🌮. We hope our shop adds a unique and interesting place to our little town.
+            <abbr title="Little Taco Shop">LTS</abbr> was founded in 2022. Our shop was built from a <strong> love of tacos</strong> 🌮🌮🌮. We hope our shop adds a unique and interesting place to our little town.
         </p>
 
         <h3>Taco Trivia</h3>
