--- a/Taco Shop Website/workhours.html
+++ b/Taco Shop Website/workhours.html
@@ -3,6 +3,7 @@
 
 <head>
 
+    <title>Our Work Hours</title>
     <meta charset="UTF-8">
     <link rel="icon" href="favicon.ico" type="ico/x-icon">
 
@@ -10,11 +11,60 @@
 
 <body>
 
-    We are open 7 days a week!
+    <header>
 
-    Sunday-Thursday
-    11am-9pm
-    Friday-Saturday
-    11am-11pm
+        <h1>The Little Taco Shop Hours</h1>
+
+        <ul>
+            <li>   
+                <a href="indext.html">Home</a>
+            </li>
+        </ul>
+   
+
+        <figure>
+
+            <img src="tacos_tray_400x267.png" alt="Tacos Tray">
+
+            <figcaption>
+                A Tray of Tasty Tacos
+            </figcaption>
+
+        </figure>
+
+    </header>
+    <hr>
+
+    <main>
+
+        <p>We are open 7 day a week!</p>
+
+        <dl>
+        <dt>
+            Sunday-Thursday
+        </dt>
+        <dd>
+            11am-9pm
+        </dd>
+        <dt>
+            Friday-Saturday
+        </dt>
+        <dd>
+            11am-11pm
+        </dd>
+        </dl>
+
+        <a href="#">Back to Top</a>
+
+    </main>
+
+    <hr>
+
+    <footer>
+
+        <p>Copyright &copy; Little Taco Shop</p>
+        <br>
+
+    </footer>
 
 </html>
