--- a/Taco Shop Website/indext.html
+++ b/Taco Shop Website/indext.html
@@ -3,10 +3,10 @@
 
 <head>
 
-    <title>Little Taco Shop</title>
     <meta charset="UTF-8">
+    <title>Little Taco Shop</title>
     <link rel="stylesheet" href="main.css" type="text/css">
-    <link rel="icon" href="favicon.ico" type="ico/x-icon">
+    <link rel="icon" href="favicon.ico" type="img/x-icon">
 
 </head>
 
@@ -19,16 +19,16 @@
         <nav>
             <ul>
                 <li>
-                    <p><a href="#about">About <abbr title="Little Taco Shop">LTS</abbr></a></p>
+                    <a href="#about">About <abbr title="Little Taco Shop">LTS</abbr></a>
                 </li>
                 <li>
-                    <p><a href="#menu">Our Menu</a></p>
+                    <a href="#menu">Our Menu</a>
                 </li>
                 <li>
-                    <p><a href="workhours.html">Store Hours</a></p>
+                    <a href="workhours.html">Store Hours</a>
                 </li>
                 <li> 
-                    <p><a href="contact.html">Contact Us</a></p>
+                    <a href="contact.html">Contact Us</a>
                 </li>
             </ul>
         </nav>
@@ -46,7 +46,7 @@
 
         <section id="about">
 
-        <h2>About <abbr title="Little Taco Shop"></abbr>LTS</h2>
+        <h2>About <abbr title="Little Taco Shop">LTS</abbr></h2>
         <p>
             <abbr title="Little Taco Shop">LTS</abbr> was founded in 2022. Our shop was built from a <strong> love of tacos</strong> 🌮🌮🌮. We hope our shop adds a unique and interesting place to our little town.
         </p>
@@ -58,7 +58,7 @@
                 When did tacos first appear in the United Stated?
             </summary>
             <p>
-              Jeffrey M. Pilcher, taco historian and professor of history at the University of Minnesota, says the earliest mention of tacos in the United States are in a newspaper from 1905. (Source: <a href="https://www.smithsonianmag.com/arts-culture/where-did-the-taco-come-from-81228162/">Smithsonian Magazine)</a>
+              Jeffrey M. Pilcher, taco historian and professor of history at the University of Minnesota, says the earliest mention of tacos in the United States are in a newspaper from 1905. (Source: <a href="https://www.smithsonianmag.com/arts-culture/where-did-the-taco-come-from-81228162/">Smithsonian Magazine</a>)
             </p>
         </details>
 
@@ -80,7 +80,7 @@
                 <th>Price</th>
             </tr>
             <tr>
-                <th rowspan="3">Crunchy</td>
+                <th rowspan="3">Crunchy</th>
                 <td>1</td>
                 <td>$1.50</td>
             </tr>
@@ -93,7 +93,7 @@
                 <td>$3.25</td>
             </tr>
             <tr>
-                <th rowspan="3">Soft</td>
+                <th rowspan="3">Soft</th>
                 <td>1</td>
                 <td>$2.00</td>
             </tr>
@@ -113,7 +113,7 @@
 
         </section>
 
-        <a href="#">Back to Top</a></p>
+        <a href="#">Back to Top</a>
 
     </main>
 
